@@ -4,5 +4,5 @@ PROJECTNAME = 'eea.geotags'
 ADD_CONTENT_PERMISSION = "Add portal content"
 
 # See http://geonames.org
-WEBSERVICE = 'http://ws.geonames.org/searchJSON'
+WEBSERVICE = 'http://api.geonames.org/searchJSON'
 ANNO_TAGS = 'eea.geotags.tags'
